@@ -15,6 +15,8 @@ Ver.5.5 (in development)
 - In SQL Database, NULL value of date or datetime type fields are falling down zero components data,
   such as 0000-00-00 00:00:00. So the zeros data handles the same as a blank.
 - Tests for sample web pages by Selenium Web Driver are introduced.
+- The Access-Control-Allow-Origin header can be appended with variable $accessControlAllowOrigin
+  in params.php file.
 - [BUG FIX] In case of the '#' target specification was placed on second or later item in data-im
   attribute, the field value wasn't shown in the node (Thanks to Tomomitsu Baba).
 - [BUG FIX] The field which applied a data converter class in FMS's portal, the converter didn't
